--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
         "@hono/zod-validator": "^0.5.0",
         "@supabase/supabase-js": "^2.47.10",
         "clsx": "^2.1.1",
+        "docx": "^9.1.0",
+        "file-saver": "^2.0.5",
         "hono": "4.7.7",
+        "html2canvas": "^1.4.1",
         "jszip": "^3.10.1",
+        "jspdf": "^2.5.2",
         "lucide-react": "^0.469.0",
         "openai": "^4.77.0",
         "qrcode": "^1.5.4",
@@ -19,6 +23,7 @@
         "react-router-dom": "^6.28.1",
         "recharts": "^2.15.0",
         "tailwind-merge": "^2.6.0",
+        "xlsx": "^0.18.5",
         "zod": "^3.24.1"
     },
     "devDependencies": {
@@ -30,20 +35,15 @@
         "@types/react-dom": "18.3.5",
         "@vitejs/plugin-react": "4.3.4",
         "autoprefixer": "^10.4.20",
-        "docx": "^9.1.0",
         "eslint": "9.17.0",
         "eslint-plugin-react-hooks": "5.0.0",
         "eslint-plugin-react-refresh": "0.4.16",
-        "file-saver": "^2.0.5",
         "globals": "15.14.0",
-        "html2canvas": "^1.4.1",
-        "jspdf": "^2.5.2",
         "postcss": "^8.4.49",
         "tailwindcss": "^3.4.17",
         "typescript": "5.7.2",
         "typescript-eslint": "8.18.2",
-        "vite": "^6.0.7",
-        "xlsx": "^0.18.5"
+        "vite": "^6.0.7"
     },
     "name": "mocha-app",
     "private": true,
