--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "@vercel/analytics": "^1.6.1",
         "@vercel/speed-insights": "^1.3.1",
         "clsx": "^2.1.1",
+        "dexie": "^4.2.1",
+        "dexie-react-hooks": "^4.2.0",
         "docx": "^9.1.0",
         "file-saver": "^2.0.5",
         "hono": "4.7.7",
