--- a/package.json
+++ b/package.json
@@ -42,12 +42,15 @@
         "eslint": "9.17.0",
         "eslint-plugin-react-hooks": "5.0.0",
         "eslint-plugin-react-refresh": "0.4.16",
+        "fake-indexeddb": "^6.2.5",
         "globals": "15.14.0",
         "postcss": "^8.4.49",
         "tailwindcss": "^3.4.17",
         "typescript": "5.7.2",
         "typescript-eslint": "8.18.2",
-        "vite": "^6.0.7"
+        "vite": "^6.0.7",
+        "vite-plugin-pwa": "^1.2.0",
+        "vitest": "^4.0.16"
     },
     "name": "mocha-app",
     "private": true,
