feat: Adiciona componentes de indicador de uso de IA e visualização de calendário, nova página de agenda e estrutura inicial da aplicação, com atualização de dependências.

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,19 @@
 dist/
 node_modules/
 .vercel
+.env
+.env.*
 .env*.local
 .dev.vars
 .wrangler
 worker-configuration.d.ts
 *.sqlite
+
+# Supabase Secrets (NEVER commit these)
+supabase/.env
+supabase/.env.local
+**/service_role_key*
+**/anon_key*
 
 # Logs
 *.log
