--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@vercel/analytics": "^1.6.1",
         "@vercel/speed-insights": "^1.3.1",
         "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
         "dexie": "^4.2.1",
         "dexie-react-hooks": "^4.2.0",
         "docx": "^9.1.0",
@@ -32,6 +33,7 @@
     },
     "devDependencies": {
         "@eslint/js": "9.17.0",
+        "@fission-ai/openspec": "^0.17.2",
         "@types/file-saver": "^2.0.7",
         "@types/node": "22.10.2",
         "@types/qrcode": "^1.5.5",
